Renaming: DynamicControls to IronControls; IronControls to IronWrapperControls

--- a/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
+++ b/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
@@ -105,6 +105,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\evalhook-0.5.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\getsource-0.2.1.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\haml-2.2.24.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\json_pure-1.7.5.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.4.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\partialruby-0.2.0.gem" />
@@ -319,6 +320,93 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\VERSION" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\VERSION_NAME" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\.travis.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\CHANGES" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\COPYING" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\COPYING-json-jruby" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\data\example.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\diagrams\.keep" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\generator\depend" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\generator\extconf.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\parser\depend" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\parser\extconf.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\parser\parser.rl" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\Gemfile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\GPL" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\install.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\Parser.rl" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\json-java.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\json.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\json_pure.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\bigdecimal.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\complex.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\core.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\date.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\date_time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\exception.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\ostruct.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\range.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\rational.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\regexp.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\struct.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\symbol.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\add\time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\common.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\ext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\ext\.keep" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\generic_object.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\pure.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\pure\generator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\pure\parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\lib\json\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\Rakefile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\README-json-jruby.markdown" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\README.rdoc" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail1.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail10.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail11.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail12.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail13.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail14.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail18.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail19.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail2.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail20.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail21.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail22.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail23.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail24.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail25.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail27.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail28.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail3.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail4.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail5.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail6.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail7.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail8.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\fail9.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass1.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass15.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass16.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass17.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass2.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass26.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\fixtures\pass3.json" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\setup_variant.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_addition.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_encoding.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_fixtures.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_generate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_generic_object.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_string_matching.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tests\test_json_unicode.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\TODO" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tools\fuzz.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\tools\server.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\VERSION" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\CHANGELOG" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\init.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\lib\extras\liquid_view.rb" />
@@ -493,6 +581,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\tilt.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\evalhook-0.5.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\haml-2.2.24.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\json_pure-1.7.5.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\liquid-2.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\partialruby-0.2.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\rack-protection-1.2.0.gemspec" />
@@ -1189,6 +1278,26 @@
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\test\sass\results\subdir\nested_subdir\nested_subdir.css" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\test\sass\results\subdir\subdir.css" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\test\sass\results\units.css" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\.gitignore" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\data\index.html" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\data\prototype.js" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\fbuffer\fbuffer.h" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\generator\generator.c" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\generator\generator.h" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\parser\parser.c" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\parser\parser.h" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\ByteListTranscoder.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\Generator.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\GeneratorMethods.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\GeneratorService.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\GeneratorState.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\OptionsReader.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\Parser.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\ParserService.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\RuntimeInfo.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\StringDecoder.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\StringEncoder.java" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\java\src\json\ext\Utils.java" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\History.txt" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\Manifest.txt" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\liquid-2.0.0\README.txt" />
